--- a/BioCro/DARPA/upload_params.Rmd
+++ b/BioCro/DARPA/upload_params.Rmd
@@ -35,7 +35,7 @@ Clean up data to have the final columns:
 3. `site`: one of three sites at Donald Danforth Plant Science Center, either Growth Chamber, Greenhouse, or Outdoor, using BETYdb site names
 4. `treatment`: specifies record's treatment using BETYdb treatment names
 5. `local_datetime`: convert date into machine readable format
-6.  `Vcmax`, `leaf_respiration_rate_m2`, `quantum_efficiency`, `stomatal_slope.BB`,  `cuticular_cond`: estimated mean of physiological parameters from parameters_data.csv
+6.  `Vcmax`, `leaf_respiration_rate_m2`, `quantum_efficiency`, `theta`, `stomatal_slope.BB`,  `cuticular_cond`: estimated mean of physiological parameters from parameters_data.csv
 7. `leafT`: leaf temperature, which is required by BETYdb
 8. `n`: sample size, always set to 1
 9. `SE`: estimated standard error of physiological parameters from parameters_data.csv
@@ -47,7 +47,7 @@ First, manage the chamber experiment parameters:
 upload_parameters <- all_parameters %>% 
   #dplyr::mutate(notes = paste("row", row_number(), "in parameters_data.csv")) %>% 
   filter(Genotype == "ME034", 
-         trait %in% c("vmax", "Rd", "AQY", "g1BB", "g0BB")) %>% 
+         trait %in% c("vmax", "Rd", "AQY", "theta_lc", "g1BB", "g0BB")) %>% 
   mutate(date = as.POSIXct(as.character(Date), format = "%Y%m%d"), 
          treatment = case_when(Treatment == "31_22_250" ~ "regular night temperature", 
                                Treatment == "31_31_250" ~ "high night temperature", 
@@ -64,10 +64,13 @@ upload_parameters <- all_parameters %>%
          variable = case_when(trait == "vmax" ~ "Vcmax", 
                            trait == "Rd" ~ "leaf_respiration_rate_m2",
                            trait == "AQY" ~ "quantum_efficiency",
+                           trait == "theta_lc" ~ "theta", 
                            trait == "g1BB" ~ "stomatal_slope.BB",
                            trait == "g0BB" ~ "cuticular_cond"),
-         mean = round(Value, 3),
-         SE = round(SE,3)) %>% 
+         mean = case_when(trait == "g0BB" ~ round(ud.convert(Value, "mol/m2/s", "umol/m2/s"), 0),
+                          TRUE ~ round(Value, 3)),
+         SE = case_when(trait == "g0BB" ~ round(ud.convert(SE, "mol/m2/s", "umol/m2/s"), 0),
+                          TRUE ~ round(SE, 3))) %>% 
   select(-ID, -SD, -Date.run, -Genotype, -A_Ci, -A_Qin, -Rd, -Treatment, -Value, -trait) %>% 
   #spread(Trait, value) %>% 
   dplyr::rename(local_datetime = date) %>% 
@@ -114,17 +117,19 @@ newdir <- paste0("upload_params_data/", dname)
 prevDate <- max(phys$local_datetime)
 
 #split dataframe for each parameter type and save each dataframe as a csv 
-params <- c("Vcmax", "leaf_respiration_rate_m2", "quantum_efficiency", "stomatal_slope.BB", "cuticular_cond")
+params <- c("Vcmax", "leaf_respiration_rate_m2", "quantum_efficiency", "theta", "stomatal_slope.BB", "cuticular_cond")
 for(p in params){
   trait_df <- upload_parameters %>%
-    filter(variable == p, 
+    filter(variable == p,
            local_datetime > prevDate) %>%
     spread(variable, mean)
   
-  # If Vcmax, rename columns n and SE 
+  # If Vcmax, rename columns n and SE; if cuticular_cond, convert units; if theta, remove leafT
   if(p == "Vcmax") {
-    trait_df2 <- trait_df %>% dplyr::rename(Sample.size = n, Std.err = SE)} else {
-      trait_df2 <- trait_df}
+    trait_df2 <- trait_df %>% dplyr::rename(Sample.size = n, Std.err = SE)} else if(p == "cuticular_cond")
+    {trait_df2 <- trait_df %>% mutate(cuticular_cond = round(cuticular_cond, 0))} else if(p == "theta")
+      {trait_df2 <- trait_df %>% select(-leafT)} else
+        {trait_df2 <- trait_df}
   
   write.csv(trait_df2, paste0(newdir, "/phys_parameters_", p, ".csv"), row.names = FALSE)
 }
@@ -139,6 +144,8 @@ cd /home/jessicaguo/model-vignettes/BioCro/DARPA/upload_params_data/20200905
 for file in *.csv; do
   curl -X POST --data-binary @$file    http://welsch.cyverse.org:8000/bety/api/v1/traits.csv?key=uaZWRQT44fQVzDbxOET03EZJGXiEX9yUDEDiDwe4 -H "Content-Type: text/csv"
 done
+
+curl -X POST --data-binary @phys_parameters_cuticular_cond.csv    http://welsch.cyverse.org:8000/bety/api/v1/traits.csv?key=uaZWRQT44fQVzDbxOET03EZJGXiEX9yUDEDiDwe4 -H "Content-Type: text/csv"
 ```
 
 
