--- a/BioCro/DARPA/regional_runs.Rmd
+++ b/BioCro/DARPA/regional_runs.Rmd
@@ -94,10 +94,10 @@ rr_results <- rr_results %>%
          transpiration = ud.convert(CanopyTrans, "Mg/ha/hr", "kg/m2/hr"), 
          genotype_formal = case_when(
            genotype == "wt" ~ "Wild type", 
-           genotype == "ss" ~ "Decreased stomata", 
-           genotype == "ca" ~ "Changed carbon allocation" 
+           genotype == "ss" ~ "Reduced stomatal conductance", 
+           genotype == "ca" ~ "Dwarf" 
          ), 
-         genotype_formal = factor(genotype_formal, levels = c("Wild type", "Decreased stomata", "Changed carbon allocation")))
+         genotype_formal = factor(genotype_formal, levels = c("Wild type", "Reduced stomatal conductance", "Dwarf")))
 ```
 
 # Plot biomass 
@@ -163,27 +163,34 @@ Comparison of time series of mean and variation of total biomass by date, betwee
 
 ```{r}
 bio_comp_1 <- ggplot() +
-  geom_line(data = filter(rr, genotype_formal %in% c("Wild type", "Decreased stomata")), 
-            aes(x = date, y = mean_total_biomass, group = stringr::str_wrap(genotype_formal, 12), 
+  geom_line(data = filter(rr, genotype_formal %in% c("Wild type", "Reduced stomatal conductance")), 
+            aes(x = date, y = mean_total_biomass, 
+                group = stringr::str_wrap(genotype_formal, 12), 
                 color = stringr::str_wrap(genotype_formal, 12))) +
-  geom_ribbon(data = filter(rr, genotype_formal %in% c("Wild type", "Decreased stomata")), 
+  geom_ribbon(data = filter(rr, genotype_formal %in% c("Wild type", "Reduced stomatal conductance")), 
               aes(x = date, ymin = mean_total_biomass - var_total_biomass, 
                   ymax = mean_total_biomass + var_total_biomass, 
-                  group = stringr::str_wrap(genotype_formal, 12), fill = stringr::str_wrap(genotype_formal, 12)), alpha = 0.2) +
+                  group = stringr::str_wrap(genotype_formal, 12), 
+                  fill = stringr::str_wrap(genotype_formal, 12)), alpha = 0.2) +
   scale_x_datetime(labels = scales::date_format("%b")) +
+  scale_color_manual(values = c("red", "black")) +
+  scale_fill_manual(values = c("red", "black")) +
   labs(x = "Month", y = "Biomass (kg/m2)", fill = "Genotype", color = "Genotype") +
   theme_classic() +
   lims(y = c(0, 2))
 
 bio_comp_2 <- ggplot() +
-  geom_line(data = filter(rr, genotype_formal %in% c("Wild type", "Changed carbon allocation")), 
-            aes(x = date, y = mean_total_biomass, group = stringr::str_wrap(genotype_formal, 12), 
+  geom_line(data = filter(rr, genotype_formal %in% c("Wild type", "Dwarf")), 
+            aes(x = date, y = mean_total_biomass, 
+                group = stringr::str_wrap(genotype_formal, 12), 
                 color = stringr::str_wrap(genotype_formal, 12))) +
-  geom_ribbon(data = filter(rr, genotype_formal %in% c("Wild type", "Changed carbon allocation")), 
+  geom_ribbon(data = filter(rr, genotype_formal %in% c("Wild type", "Dwarf")), 
               aes(x = date, ymin = mean_total_biomass - var_total_biomass, 
                   ymax = mean_total_biomass + var_total_biomass,
                   group = stringr::str_wrap(genotype_formal, 12), fill = stringr::str_wrap(genotype_formal, 12)), alpha = 0.2) +
   scale_x_datetime(labels = scales::date_format("%b")) +
+  scale_color_manual(values = c("orange", "black")) +
+  scale_fill_manual(values = c("orange", "black")) +
   labs(x = "Month", y = "Biomass (kg/m2)", fill = "Genotype", color = "Genotype") +
   theme_classic() +
   lims(y = c(0, 2))
@@ -231,6 +238,15 @@ transpiration_animation <- ggplot() +
 animate(transpiration_animation, fps = 100, height = 400, width = 400)
 anim_save("stlew_transpiration.gif", animation = transpiration_animation, 
           path = "regional_runs_inputs/results/", fps = 100, height = 400, width = 400)
+
+ggplot() +
+  geom_polygon(data = gif_background, aes(x = long, y = lat, group = group), 
+               fill = "white", color = "black") +
+  geom_segment(aes(x = -114, y = 40.5, xend = -78, yend = 40.5), size = 3) +
+  geom_segment(aes(x = -114, y = 36, xend = -78, yend = 36), size = 3) +
+  geom_segment(aes(x = -114, y = 40.5, xend = -114, yend = 36), size = 3) +
+  geom_segment(aes(x = -78, y = 40.5, xend = -78, yend = 36), size = 3) +
+  theme_nothing()
 ```
 
 ## Comparisons
@@ -239,27 +255,34 @@ Comparison of time series of mean and variation of total biomass by date, betwee
 
 ```{r}
 trans_comp_1 <- ggplot() +
-  geom_line(data = filter(rr, genotype_formal %in% c("Wild type", "Decreased stomata")), 
-            aes(x = date, y = mean_transpiration, group = stringr::str_wrap(genotype_formal, 12), 
+  geom_line(data = filter(rr, genotype_formal %in% c("Wild type", "Reduced stomatal conductance")), 
+            aes(x = date, y = mean_transpiration, 
+                group = stringr::str_wrap(genotype_formal, 12), 
                 color = stringr::str_wrap(genotype_formal, 12))) +
-  geom_ribbon(data = filter(rr, genotype_formal %in% c("Wild type", "Decreased stomata")), 
+  geom_ribbon(data = filter(rr, genotype_formal %in% c("Wild type", "Reduced stomatal conductance")), 
               aes(x = date, ymin = mean_transpiration - var_transpiration, 
                   ymax = mean_transpiration + var_transpiration, 
-                  group = stringr::str_wrap(genotype_formal, 12), fill = stringr::str_wrap(genotype_formal, 12)), alpha = 0.2) +
+                  group = stringr::str_wrap(genotype_formal, 12), 
+                  fill = stringr::str_wrap(genotype_formal, 12)), alpha = 0.2) +
   scale_x_datetime(labels = scales::date_format("%b")) +
+  scale_color_manual(values = c("red", "black")) +
+  scale_fill_manual(values = c("red", "black")) +
   labs(x = "Month", y = "Transpiration (kg/m2/hr)", fill = "Genotype", color = "Genotype") +
   theme_classic() +
   lims(y = c(0, 15))
 
 trans_comp_2 <- ggplot() +
-  geom_line(data = filter(rr, genotype_formal %in% c("Wild type", "Changed carbon allocation")), 
-            aes(x = date, y = mean_transpiration, group = stringr::str_wrap(genotype_formal, 12), 
+  geom_line(data = filter(rr, genotype_formal %in% c("Wild type", "Dwarf")), 
+            aes(x = date, y = mean_transpiration, 
+                group = stringr::str_wrap(genotype_formal, 12), 
                 color = stringr::str_wrap(genotype_formal, 12))) +
-  geom_ribbon(data = filter(rr, genotype_formal %in% c("Wild type", "Changed carbon allocation")), 
+  geom_ribbon(data = filter(rr, genotype_formal %in% c("Wild type", "Dwarf")), 
               aes(x = date, ymin = mean_transpiration - var_transpiration, 
                   ymax = mean_transpiration + var_transpiration,
                   group = stringr::str_wrap(genotype_formal, 12), fill = stringr::str_wrap(genotype_formal, 12)), alpha = 0.2) +
   scale_x_datetime(labels = scales::date_format("%b")) +
+  scale_color_manual(values = c("orange", "black")) +
+  scale_fill_manual(values = c("orange", "black")) +
   labs(x = "Month", y = "Transpiration (kg/m2/hr)", fill = "Genotype", color = "Genotype") +
   theme_classic() +
   lims(y = c(0, 15))
