--- a/BioCro/DARPA/upload_params_data/BETY/Compare_BETY_to_upload.Rmd
+++ b/BioCro/DARPA/upload_params_data/BETY/Compare_BETY_to_upload.Rmd
@@ -2,34 +2,41 @@
 title: "Compare BETY and upload_params_data"
 ---
   
-  This script compares the results of what is in BETY to what has been uploaded to it, in an effort to identify mistakes or duplicates. 
+This script compares the results of what is in BETY to what has been uploaded to it, in an effort to identify mistakes or duplicates. 
 
-Data from BETY is selecte with the following SQL query: select * from traits where treatment_id in (9000000015, 9000000016, 9000000017, 9000000018, 9000000019, 9000000020)
-The results are saved as csv in the upload_params_data/BETY folder as the most recent 'update_at' date. 
+Data from BETY is selected with the following SQL query: `select * from traits where treatment_id in (9000000015, 9000000016, 9000000017, 9000000018, 9000000019, 9000000020)`
+
+The results are saved as csv in the upload_params_data/BETY folder, with a name that matches the most recent date in the `updated_at` column. 
 
 Load libraries and both sets of data
 ```{r}
 options(scipen = 999)
 library(dplyr)
 library(arsenal)
-#import newest BETY file
-filename <- max(as.numeric(substr(list.files(pattern = "csv"), 1,8)))
-in_bety <- read.csv(paste0(filename, ".csv"), header = T)
-#import full upload_params_data data file
-in_upload <- read.csv("../phys_parameters.csv",  header = T)
 ```
 
-Convert the treatment and variable ID columns to match
+Import the newest BETY file.  
+```{r}
+filename <- max(as.numeric(substr(list.files(pattern = "csv"), 1,8)))
+in_bety <- read.csv(paste0(filename, ".csv"), header = T)
+```
+
+For comparison, import the full upload_params_data data file.
+```{r}
+in_upload <- read.csv("../phys_params/phys_parameters.csv",  header = T)
+```
+
+Convert the treatment and variable ID columns to match upload data format. 
 ```{r}
 bety <- in_bety %>% 
   mutate(date = as.POSIXct(as.character(date), format = "%d/%m/%Y %H:%M:%S"),
          treatment = case_when(treatment_id == "9000000015" ~ "regular night temperature",
                                treatment_id == "9000000016" ~ "high night temperature",
-                               treatment_id == "9000000017" ~ "high night",
+                               treatment_id == "9000000017" ~ "high light",
                                treatment_id == "9000000018" ~ "greenhouse",
                                treatment_id == "9000000019" ~ "outdoor 5 cm density",
                                treatment_id == "9000000020" ~ "outdoor JollyG soil"),
-         variable = case_when(variable_id == "7" ~ "leaf_respiration_rate",
+         variable = case_when(variable_id == "7" ~ "leaf_respiration_rate_m2",
                               variable_id == "39" ~ "quantum_efficiency",
                               variable_id == "404" ~ "stomatal_slope.BB",
                               variable_id == "4" ~ "Vcmax",
@@ -39,23 +46,29 @@ bety <- in_bety %>%
                           site_id == "9000000004" ~ "Donald Danforth Plant Science Center Growth Chamber",
                           site_id == "9000000006" ~ "Donald Danforth Plant Science Center Outdoor"),
          SE = stat,
-         entity = entity_id) %>%
+         entity = entity_id) %>% 
   select(date, site, treatment, variable, mean, n, SE, entity) %>%
   arrange(site, treatment, variable, entity) %>%
-  select(-date, -entity)
+  select(-date, -entity) 
+
+bety <- bety %>%
+  mutate_if(sapply(bety, is.character), as.factor)
 ```
 
-Create matching version of upload data
+Create matching version of upload data. 
 ```{r}
 upload <- in_upload %>%
-  select(site, treatment, variable, mean, n, SE, entity )%>%
+  select(site, treatment, variable, mean, SE, entity) %>%
   arrange(site, treatment, variable, entity) %>%
-  select(-entity)
+  mutate(n = case_when(!is.na(SE) ~ 1,
+                       is.na(SE) ~ NA_real_)) %>%
+  select(-entity) %>%
+  select(site, treatment, variable, mean, n, SE)
 ```
 
-Compare both data versions
+Compare both data versions. 
 ```{r}
 compare(bety, upload)
 ```
 
-If no differences, should return 0 variables and 0 observations not shared. 
+If no differences, should return 0 variables and 0 observations not shared, differences found in 0/5 variables, and 0 variables compared have non-identical attributes. 
