--- a/BioCro/DARPA/upload_params_data/BETY/Compare_BETY_to_upload.Rmd
+++ b/BioCro/DARPA/upload_params_data/BETY/Compare_BETY_to_upload.Rmd
@@ -12,6 +12,7 @@ Load libraries and both sets of data
 ```{r}
 options(scipen = 999)
 library(dplyr)
+library(tidyr)
 library(arsenal)
 ```
 
@@ -21,9 +22,10 @@ filename <- max(as.numeric(substr(list.files(pattern = "csv"), 1,8)))
 in_bety <- read.csv(paste0(filename, ".csv"), header = T)
 ```
 
-For comparison, import the full upload_params_data data file.
+For comparison, import the full upload_params_data data file for phys_params and SLA.
 ```{r}
-in_upload <- read.csv("../phys_params/phys_parameters.csv",  header = T)
+in_phys <- read.csv("../phys_params/phys_parameters.csv",  header = T)
+in_sla <- read.csv("../SLA/sla.csv",  header = T)
 ```
 
 Convert the treatment and variable ID columns to match upload data format. 
@@ -41,7 +43,8 @@ bety <- in_bety %>%
                               variable_id == "404" ~ "stomatal_slope.BB",
                               variable_id == "4" ~ "Vcmax",
                               variable_id == "2000000027" ~ "theta",
-                              variable_id == "38" ~ "cuticular_cond"),
+                              variable_id == "38" ~ "cuticular_cond",
+                              variable_id == "15" ~ "SLA"),
          site = case_when(site_id == "9000000005" ~ "Donald Danforth Plant Science Center Greenhouse",
                           site_id == "9000000004" ~ "Donald Danforth Plant Science Center Growth Chamber",
                           site_id == "9000000006" ~ "Donald Danforth Plant Science Center Outdoor"),
@@ -52,12 +55,16 @@ bety <- in_bety %>%
   select(-date, -entity) 
 
 bety <- bety %>%
-  mutate_if(sapply(bety, is.character), as.factor)
+  mutate_if(sapply(bety, is.character), as.factor) %>%
+  mutate_if(sapply(bety, is.integer), as.numeric)
+
+#reorder
+bety <- bety[order(bety$site, bety$treatment, bety$variable, bety$mean),]
 ```
 
-Create matching version of upload data. 
+Create matching version of uploaded phys_params. 
 ```{r}
-upload <- in_upload %>%
+phys <- in_phys %>%
   select(site, treatment, variable, mean, SE, entity) %>%
   arrange(site, treatment, variable, entity) %>%
   mutate(n = case_when(!is.na(SE) ~ 1,
@@ -66,9 +73,33 @@ upload <- in_upload %>%
   select(site, treatment, variable, mean, n, SE)
 ```
 
+Create matching version of uploaded sla 
+```{r}
+sla <- in_sla %>%
+  tidyr::gather(SLA, key = "variable", value = "mean") %>%
+  mutate(entity = NA, 
+         SE = NA)%>%
+  select(site, treatment, variable, mean, SE, entity) %>%
+  arrange(site, treatment, variable, entity) %>%
+  mutate(n = case_when(!is.na(SE) ~ 1,
+                       is.na(SE) ~ NA_real_)) %>%
+  select(-entity) %>%
+  select(site, treatment, variable, mean, n, SE)
+```
+
+Combine traits
+```{r}
+all <- rbind.data.frame(phys, sla)
+all$variable <- factor(all$variable, 
+                       levels = unique(all$variable)[c(1,2,3,7,4,5,6)])
+
+#reorder
+all <- all[order(all$site, all$treatment, all$variable, all$mean),]
+```
+
 Compare both data versions. 
 ```{r}
-compare(bety, upload)
+compare(bety, all)
 ```
 
 If no differences, should return 0 variables and 0 observations not shared, differences found in 0/5 variables, and 0 variables compared have non-identical attributes. 
